--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -15,6 +15,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Name: Devanshi Bhadania\n",
+    "### Enrollment : 23010101604\n",
+    "### Date: 26-11-2024"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1. Import the necessary libraries"
    ]
   },
